# product_api

./: Products.postman_collection.json  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
products/: models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_order_owner.py
